Updated Build with new Model

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Builds.loader.js";
+      const loaderUrl = buildUrl + "/NewEnvironment.loader.js";
       const config = {
-        dataUrl: buildUrl + "/Builds.data",
-        frameworkUrl: buildUrl + "/Builds.framework.js",
-        codeUrl: buildUrl + "/Builds.wasm",
+        dataUrl: buildUrl + "/NewEnvironment.data",
+        frameworkUrl: buildUrl + "/NewEnvironment.framework.js",
+        codeUrl: buildUrl + "/NewEnvironment.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GA_Test",
