Updated controls for mobile

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/NewEnvironment.loader.js";
       const config = {
-        dataUrl: buildUrl + "/NewEnvironment.data",
-        frameworkUrl: buildUrl + "/NewEnvironment.framework.js",
-        codeUrl: buildUrl + "/NewEnvironment.wasm",
+        dataUrl: buildUrl + "/NewEnvironment.data.unityweb",
+        frameworkUrl: buildUrl + "/NewEnvironment.framework.js.unityweb",
+        codeUrl: buildUrl + "/NewEnvironment.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GA_Test",
