--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/New folder (2).loader.js";
+      const loaderUrl = buildUrl + "/NewEnvironment.loader.js";
       const config = {
-        dataUrl: buildUrl + "/New folder (2).data.unityweb",
-        frameworkUrl: buildUrl + "/New folder (2).framework.js.unityweb",
-        codeUrl: buildUrl + "/New folder (2).wasm.unityweb",
+        dataUrl: buildUrl + "/NewEnvironment.data.unityweb",
+        frameworkUrl: buildUrl + "/NewEnvironment.framework.js.unityweb",
+        codeUrl: buildUrl + "/NewEnvironment.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GA_Test",
