Update - New Environment

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/NewEnvironment.loader.js";
+      const loaderUrl = buildUrl + "/wow-test-19s.loader.js";
       const config = {
-        dataUrl: buildUrl + "/NewEnvironment.data.unityweb",
-        frameworkUrl: buildUrl + "/NewEnvironment.framework.js.unityweb",
-        codeUrl: buildUrl + "/NewEnvironment.wasm.unityweb",
+        dataUrl: buildUrl + "/wow-test-19s.data.unityweb",
+        frameworkUrl: buildUrl + "/wow-test-19s.framework.js.unityweb",
+        codeUrl: buildUrl + "/wow-test-19s.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "MythyaVerse",
         productName: "GA_Test",
         productVersion: "0.1.0",
       };
