Update with No Texture Override

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/wow-test-19s.loader.js";
+      const loaderUrl = buildUrl + "/wow-test-19s1.loader.js";
       const config = {
-        dataUrl: buildUrl + "/wow-test-19s.data.unityweb",
-        frameworkUrl: buildUrl + "/wow-test-19s.framework.js.unityweb",
-        codeUrl: buildUrl + "/wow-test-19s.wasm.unityweb",
+        dataUrl: buildUrl + "/wow-test-19s1.data.unityweb",
+        frameworkUrl: buildUrl + "/wow-test-19s1.framework.js.unityweb",
+        codeUrl: buildUrl + "/wow-test-19s1.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MythyaVerse",
         productName: "GA_Test",
